objects/HealthCloudGA__EhrMedicationStatement__c.object
<CustomObject>
    <description>A record of medication being taken by a patient, or that the medication has been given to a patient where the record is the result of a report from the patient or another clinician.</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EHR Medication Statements</relationshipLabel>
        <relationshipName>MedicationStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>HealthCloudGA__EhrDevice__c</referenceTo>
        <relationshipLabel>Medication Statements</relationshipLabel>
        <relationshipName>MedicationStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationCodeLabel__c</fullName>
        <description>Friendly name for medication code</description>
        <inlineHelpText>Friendly name for medication code</inlineHelpText>
        <label>Medication Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationCodeSystem__c</fullName>
        <description>System for Code that identifies this medication</description>
        <inlineHelpText>System for Code that identifies this medication</inlineHelpText>
        <label>Medication Code System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationCode__c</fullName>
        <description>Code that identify this medication</description>
        <inlineHelpText>Code that identify this medication</inlineHelpText>
        <label>Medication Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationExpiration__c</fullName>
        <label>Medication Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationIsBrand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if a brand</description>
        <inlineHelpText>True if a brand</inlineHelpText>
        <label>Medication Is Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationKindCode__c</fullName>
        <description>product | package code</description>
        <inlineHelpText>product | package code</inlineHelpText>
        <label>Medication Kind Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationKindLabel__c</fullName>
        <description>product | package friendly name</description>
        <inlineHelpText>product | package friendly name</inlineHelpText>
        <label>Medication Kind Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationKindSystem__c</fullName>
        <description>product | package code system</description>
        <inlineHelpText>product | package code system</inlineHelpText>
        <label>Medication Kind System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationLotNumber__c</fullName>
        <description>Lot number for medication batch</description>
        <inlineHelpText>Lot number for medication batch</inlineHelpText>
        <label>Medication Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationName__c</fullName>
        <description>Common / Commercial name</description>
        <inlineHelpText>Common / Commercial name</inlineHelpText>
        <label>Medication Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationProductFormCode__c</fullName>
        <description>powder | tablets | carton + code</description>
        <inlineHelpText>powder | tablets | carton + code</inlineHelpText>
        <label>Medication Product Form Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationProductFormLabel__c</fullName>
        <description>powder | tablets | carton + friendly name</description>
        <inlineHelpText>powder | tablets | carton + friendly name</inlineHelpText>
        <label>Medication Product Form Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationProductFormSystem__c</fullName>
        <description>powder | tablets | carton + system</description>
        <inlineHelpText>powder | tablets | carton + system</inlineHelpText>
        <label>Medication Product Form System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>Medication Statements</relationshipLabel>
        <relationshipName>MedicationStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonNotGivenCode__c</fullName>
        <description>ReasonNotGiven Symbol in syntax defined by the system</description>
        <label>Reason Not Given Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonNotGivenLabel__c</fullName>
        <description>Friendly name for Reason code or indication for writing the prescription</description>
        <inlineHelpText>Friendly name for Reason code or indication for writing the prescription</inlineHelpText>
        <label>Reason Not Given Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonNotGivenSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Reason Not Given System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusCode__c</fullName>
        <description>A code specifying the state of the statement. Generally, this will be in-progress or completed.</description>
        <inlineHelpText>A code specifying the state of the statement. Generally, this will be in-progress or completed.</inlineHelpText>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in-progress</fullName>
                </value>
                <value>
                    <fullName>completed</fullName>
                </value>
                <value>
                    <fullName>entered-in-error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__WasNotGiven__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Not Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__WhenGiven__c</fullName>
        <label>When Given</label>
        <type>DateTime</type>
    </fields>
    <label>EHR Medication Statement</label>
    <nameField>
        <displayFormat>Stat-{0}</displayFormat>
        <label>EHR Medication Statement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Medication Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>